samples/_failures_safe/1761599819_7827d5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_61d276af.c: In function ‘main’:
./samples/SAFE/__tmp_61d276af.c:156:16: error: missing terminating " character
  156 |         printf("\nResult (A * B
      |                ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_61d276af.c:156:9: error: expected expression at end of input
  156 |         printf("\nResult (A * B
      |         ^~~~~~
./samples/SAFE/__tmp_61d276af.c:156:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_61d276af.c:156:9: error: expected declaration or statement at end of input
